Bug 147697: assertion every time I send mail: generate_encodedwords(), output_carryoverlen must be > 0. r=ducarroz, s=bienvenu